--- a/Due It/Base.lproj/Main.storyboard
+++ b/Due It/Base.lproj/Main.storyboard
@@ -145,6 +145,88 @@
             </objects>
             <point key="canvasLocation" x="260.86956521739131" y="132.58928571428572"/>
         </scene>
+        <!--EditTaskViewController-->
+        <scene sceneID="aVf-sv-CSQ">
+            <objects>
+                <viewController storyboardIdentifier="EditTaskViewController" title="EditTaskViewController" id="MMn-tH-DjO" customClass="EditTaskViewController" customModule="Due_It" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="bSk-2n-bED" customClass="EditViewController">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Edit Task Title" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="rWX-ew-o9i">
+                                <rect key="frame" x="51" y="120" width="312" height="49"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <accessibility key="accessibilityConfiguration" identifier="AddTaskViewController">
+                                    <accessibilityTraits key="traits" allowsDirectInteraction="YES"/>
+                                </accessibility>
+                                <fontDescription key="fontDescription" type="system" pointSize="37"/>
+                                <textInputTraits key="textInputTraits"/>
+                                <connections>
+                                    <action selector="editTitleField:" destination="lc0-iY-DxS" eventType="editingDidEnd" id="Gug-Kz-J6K"/>
+                                    <outlet property="delegate" destination="gLc-zw-Sgl" id="3jD-x3-jeE"/>
+                                </connections>
+                            </textField>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Urgency" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kBB-jz-9iM">
+                                <rect key="frame" x="140" y="506" width="135" height="45"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="37"/>
+                                <color key="textColor" red="0.97739091300000003" green="1" blue="0.35452703660000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Due Date" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SSX-TR-0b5">
+                                <rect key="frame" x="133" y="225" width="148" height="45"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="37"/>
+                                <color key="textColor" red="0.97739091300000003" green="1" blue="0.35452703660000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="PFT-tl-MpO">
+                                <rect key="frame" x="109" y="700" width="196" height="46"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" white="1" alpha="0.49834947183098594" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="25"/>
+                                <state key="normal" title="EDIT">
+                                    <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
+                                <connections>
+                                    <action selector="editButton:" destination="lc0-iY-DxS" eventType="touchUpInside" id="U78-Ye-z0Q"/>
+                                    <action selector="editButton:" destination="MMn-tH-DjO" eventType="touchUpInside" id="mf8-eK-uS6"/>
+                                    <segue destination="BYZ-38-t0r" kind="show" id="H21-4i-j1i"/>
+                                </connections>
+                            </button>
+                            <datePicker contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="dateAndTime" minuteInterval="1" translatesAutoresizingMaskIntoConstraints="NO" id="a7M-3g-QGq">
+                                <rect key="frame" x="20" y="278" width="374" height="187"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                <date key="date" timeIntervalSinceReferenceDate="565292496.30294204">
+                                    <!--2018-11-30 17:41:36 +0000-->
+                                </date>
+                                <connections>
+                                    <action selector="dateChange:" destination="MMn-tH-DjO" eventType="valueChanged" id="Jb4-c7-fWc"/>
+                                </connections>
+                            </datePicker>
+                            <slider opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" minValue="0.0" maxValue="10" translatesAutoresizingMaskIntoConstraints="NO" id="svp-ze-60K">
+                                <rect key="frame" x="58" y="578" width="298" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <connections>
+                                    <action selector="urgencyChange:" destination="MMn-tH-DjO" eventType="valueChanged" id="eT1-Y7-48I"/>
+                                </connections>
+                            </slider>
+                        </subviews>
+                        <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="nXj-e4-0tz"/>
+                    </view>
+                    <connections>
+                        <outlet property="editDate" destination="a7M-3g-QGq" id="65V-o4-Acv"/>
+                        <outlet property="editTaskTitle" destination="rWX-ew-o9i" id="lE8-Nx-ZwE"/>
+                        <outlet property="editUrgency" destination="svp-ze-60K" id="gIN-X0-117"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="olm-zR-jtZ" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <exit id="lc0-iY-DxS" userLabel="Exit" sceneMemberID="exit"/>
+            </objects>
+            <point key="canvasLocation" x="-481" y="910"/>
+        </scene>
         <!--AddTask-->
         <scene sceneID="WoZ-aS-XH5">
             <objects>
@@ -161,7 +243,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <datePicker contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="dateAndTime" minuteInterval="1" translatesAutoresizingMaskIntoConstraints="NO" id="cJg-VW-AgX">
-                                <rect key="frame" x="62" y="279" width="318" height="104"/>
+                                <rect key="frame" x="20" y="250" width="374" height="169"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                 <date key="date" timeIntervalSinceReferenceDate="563308493.62111104">
                                     <!--2018-11-07 18:34:53 +0000-->
@@ -171,7 +253,7 @@
                                 </connections>
                             </datePicker>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Urgency" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ahN-pB-RNK">
-                                <rect key="frame" x="140" y="427" width="135" height="45"/>
+                                <rect key="frame" x="140" y="472" width="135" height="45"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="37"/>
                                 <color key="textColor" red="0.97739091300000003" green="1" blue="0.35452703660000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -185,11 +267,6 @@
                                 <state key="normal" title="DUE IT!">
                                     <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </state>
-                                <userDefinedRuntimeAttributes>
-                                    <userDefinedRuntimeAttribute type="number" keyPath="Round">
-                                        <integer key="value" value="5"/>
-                                    </userDefinedRuntimeAttribute>
-                                </userDefinedRuntimeAttributes>
                                 <connections>
                                     <action selector="add_item:" destination="u8i-2U-4Em" eventType="touchUpInside" id="CK3-cR-hQf"/>
                                     <action selector="add_item:" destination="gLc-zw-Sgl" eventType="touchUpInside" id="Kvw-Rt-arr"/>
@@ -209,16 +286,6 @@
                                     <outlet property="delegate" destination="gLc-zw-Sgl" id="rVp-CQ-vR5"/>
                                 </connections>
                             </textField>
-                            <slider opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" minValue="0.0" maxValue="10" translatesAutoresizingMaskIntoConstraints="NO" id="Yp5-zL-LpF">
-                                <rect key="frame" x="60" y="525" width="300" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <accessibility key="accessibilityConfiguration">
-                                    <accessibilityTraits key="traits" button="YES" adjustable="YES" allowsDirectInteraction="YES"/>
-                                </accessibility>
-                                <connections>
-                                    <action selector="changeUrgency:" destination="gLc-zw-Sgl" eventType="valueChanged" id="hhA-Rd-xg2"/>
-                                </connections>
-                            </slider>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Mp8-XK-xwr">
                                 <rect key="frame" x="114" y="709" width="187" height="42"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -227,15 +294,20 @@
                                 <state key="normal" title="CANCEL">
                                     <color key="titleColor" red="0.57037321891191706" green="0.063334386108848048" blue="0.12837100414757002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </state>
-                                <userDefinedRuntimeAttributes>
-                                    <userDefinedRuntimeAttribute type="number" keyPath="round">
-                                        <integer key="value" value="5"/>
-                                    </userDefinedRuntimeAttribute>
-                                </userDefinedRuntimeAttributes>
                                 <connections>
                                     <segue destination="BYZ-38-t0r" kind="presentation" id="nDs-Nn-qQB"/>
                                 </connections>
                             </button>
+                            <slider opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" minValue="0.0" maxValue="10" translatesAutoresizingMaskIntoConstraints="NO" id="Yp5-zL-LpF">
+                                <rect key="frame" x="60" y="538" width="300" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <accessibility key="accessibilityConfiguration">
+                                    <accessibilityTraits key="traits" button="YES" adjustable="YES" allowsDirectInteraction="YES"/>
+                                </accessibility>
+                                <connections>
+                                    <action selector="changeUrgency:" destination="gLc-zw-Sgl" eventType="valueChanged" id="hhA-Rd-xg2"/>
+                                </connections>
+                            </slider>
                         </subviews>
                         <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <accessibility key="accessibilityConfiguration" identifier="AddTaskViewController"/>
@@ -254,6 +326,6 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="nDs-Nn-qQB"/>
+        <segue reference="H21-4i-j1i"/>
     </inferredMetricsTieBreakers>
 </document>
